# openapi-spring-boot-starter/src/main/java/io/github/jacksonhua/DemoController.java
@@ -1,10 +1,15 @@
 package io.github.jacksonhua;
+
 import io.github.jacksonhua.api.UsersApi;
-import io.github.jacksonhua.dto.UserCreateDTO;
-import io.github.jacksonhua.dto.UserDTO;
-import io.github.jacksonhua.dto.UserUpdateDTO;
-import io.github.jacksonhua.web.response.Page;
-import io.github.jacksonhua.web.response.Result;
+import io.github.jacksonhua.dto.DemoUserDTO;
+import io.github.jacksonhua.dto.UserCreateCommand;
+import io.github.jacksonhua.dto.UserUpdateCommand;
+import io.github.jacksonhua.common.web.response.Page;
+import io.github.jacksonhua.common.web.response.Result;
+import io.swagger.v3.oas.annotations.Hidden;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.boot.context.properties.ConfigurationProperties;
+import org.springframework.context.annotation.Conditional;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.HttpHeaders;
@@ -14,12 +19,19 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.UUID;
 
+
+/**
+ * @author whh
+ */
+
+//@ConditionalOnProperty(prefix = "openapi", name = "enabled", havingValue = "true")
 @RestController("demo")
+@Conditional(ShowDemoCondition.class)
 public class DemoController implements UsersApi {
 
 
     @Override
-    public Result<UserDTO> createUser(UserCreateDTO userCreateDTO) {
+    public Result<DemoUserDTO> createUser(UserCreateCommand userCreateCommand) {
         return null;
     }
 
@@ -37,22 +49,23 @@ public class DemoController implements UsersApi {
     }
 
     @Override
-    public Result<UserDTO> getUserById(UUID id) {
+    public Result<DemoUserDTO> getUserById(UUID id) {
         return null;
     }
 
     @Override
-    public Result<Page<UserDTO>> getUsersById(Integer page, Integer size) {
+    public Result<Page<DemoUserDTO>> getUsersById(Integer page, Integer size) {
         return null;
     }
 
     @Override
-    public Result<UserDTO> updateUser(UUID id, UserUpdateDTO userUpdateDTO) {
+    public Result<DemoUserDTO> updateUser(UUID id, UserUpdateCommand userUpdateCommand) {
         return null;
     }
 
     @Override
     public Result<Void> uploadUserAvatar(UUID id, MultipartFile file, String description) {
-        return Result.success();
+        return null;
     }
+
 }
